--- a/index.html
+++ b/index.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>WEB1 - html</title>
+        <title>WEB1 - Welcome</title>
         <meta charset="utf-8"> 
     </head>
     <body>
-        <h1><a href="index.html"></a>WEB</a></h1>
+        <h1><a href="index.html">WEB</a></h1>
         <ol>
-            <li><a href="1.html"></a>HTML</a></li>
-            <li><a href="2.html"></a>CSS</a></li>
-            <Li><a href="3.html"></a>JavaScript</a></Li>
+            <li><a href="http://info.cern.ch">First WEB</a></li>
+            <li><a href="1.html">HTML</a></li>
+            <li><a href="2.html">CSS</a></li>
+            <li><a href="3.html">JavaScript</a></Li>
         </ol>
-        <h2>HTML</h2>
-        <p><a href="https://www.w3.org/TR/html5/" target="_blank" title="html5speicification">
-            Hypertext Markup Language(HTML)</a>is the standard markup language for <strong> crating <u>web</u> pages</strong> and web applications.</p>
+        <h2>WEB</h2>
+        <p>The World Wide Web (abbreviated WWW or the Web) is an information space where documents and other web resources are identified by Uniform Resource Locators (URLs), interlinked by hypertext links, and can be accessed via the Internet.
+            English scientist Tim Berners-Lee invented the World Wide Web in 1989. He wrote the first web browser computer program in 1990 while employed at CERN in Switzerland.
+            The Web browser was released outside of CERN in 1991, first to other research institutions starting in January 1991 and to the general public on the Internet in August 1991.
+        </p>
+            
     </body>
 
 </html>
