--- a/Html.html
+++ b/Html.html
@@ -92,7 +92,7 @@
                         <a href="JavaScript.html" class="link-social link-facebook" >JavaScript</a>
                     </li>
                     <li>
-                        <a href="http://info.cern.ch" class="link-social link-facebook" >First Web</a>
+                        <a href="http://info.cern.ch" class="link-social link-facebook" >First Web→</a>
                     </li>
                     <li>
                         <a href="https://www.kunsan.ac.kr/index.kunsan?contentsSid=4714&sso=ok" class="link-social link-facebook" >군산대학교→</a>
