--- a/index.html
+++ b/index.html
@@ -60,10 +60,7 @@
         <p>
             안녕하세요.<br> 송혜성의 페이지에 온 것을 환영합니다.
         </p>
-
-
     </div>
-
 
     <div class="sidebar sidebar-a">
                 <ul class="Link">
@@ -84,6 +81,9 @@
                     </li>
                     <li>
                         <a href="JavaScript.html" class="link-social link-facebook" >JavaScript</a>
+                    </li>
+                    <li>
+                        <a href="calendar.html" class="link-social link-facebook" >Calendar</a>
                     </li>
                     <li>
                         <a href="http://info.cern.ch" class="link-social link-facebook" >First Web→</a>
@@ -115,7 +115,7 @@
             <!-- footer -->
             <footer class="global-footer">
                 <p class="copyright">&copy; 2022 Site Page by 1801162 HSCOMET78</p>
-                        </footer>
+            </footer>
     </div>
     
 </body>
