--- a/Profile.html
+++ b/Profile.html
@@ -53,7 +53,7 @@
             </header>
             
         <section class="note">
-            <p>이 페이지는 제작자의 프로필입니다.<br> 사칭 및 악용 시 법적 처벌이 있을 수 있습니다. </p>
+            <p>이 페이지는 제작자의 프로필입니다.<br>개인정보 사칭 및 악용은 삼가해주세요. </p>
         </section>
 
         <p>
@@ -89,6 +89,9 @@
                     </li>
                     <li>
                         <a href="JavaScript.html" class="link-social link-facebook" >JavaScript</a>
+                    </li>
+                    <li>
+                        <a href="calendar.html" class="link-social link-facebook" >Calendar</a>
                     </li>
                     <li>
                         <a href="http://info.cern.ch" class="link-social link-facebook" >First Web→</a>
