--- a/Profile.html
+++ b/Profile.html
@@ -63,7 +63,7 @@
             <b>생년월일</b> : 1999.01.31
         </p>
         <p>
-            <b>학력</b> : 국립 군산대학교 컴퓨터정보공학과 3학년 재학 중
+            <b>학력</b> : 2024.02 국립 군산대학교 컴퓨터정보공학과 4학년 졸업
         </p>
 
 
